axum-macros/tests/typed_path/fail/route_not_starting_with_slash_non_empty.stderr
error: paths must start with a `/`
 --> tests/typed_path/fail/route_not_starting_with_slash_non_empty.rs:4:14
  |
4 | #[typed_path("{foo}")]
  |              ^^^^^^^
